--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -4,19 +4,45 @@
 
 .app {
   width: 100%;
-  background-color: #000;;
+  background-color: #000;
+  font-family: Arial, Helvetica, sans-serif;
 }
   
 /**** HEADER ****/
 
 .header {
-  font-family: Arial, Helvetica, sans-serif;
+ 
   color: #fff;
   padding: 1em;
+ 
 }
 
 
 /**** MENU ****/
+
+.menu {
+  width: 500px;
+  height: 450px;
+  position: fixed;
+  background-color: #fff;
+  top: 25%;
+  left: 50%;
+  transform: translate(-50%);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  padding: 20px 0 20px 0;
+  border-radius: 5px;
+  
+}
+
+.menu__list {
+  height: 200px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
 
 
 /**** BACKGROUND IMAGE ****/
