--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -11,21 +11,23 @@
 /**** HEADER ****/
 
 .header {
- 
+  position: sticky;
+  top: 0;
   color: #fff;
   padding: 1em;
- 
+ z-index: 1;
+ background-color: #000;
 }
 
 
 /**** MENU ****/
 
 .menu {
-  width: 500px;
-  height: 450px;
+  width: 1000px;
+  height: 550px;
   position: fixed;
   background-color: #fff;
-  top: 25%;
+  top: 20%;
   left: 50%;
   transform: translate(-50%);
   display: flex;
@@ -33,15 +35,31 @@
   align-items: center;
   justify-content: space-between;
   padding: 20px 0 20px 0;
-  border-radius: 5px;
-  
+  border-radius: 5px;  
+ z-index: 2;
 }
 
 .menu__list {
   height: 200px;
+  width: 900px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.menu__item {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  align-items: center;
+}
+
+.menu__item--text {
+  margin-top: 1em;
+}
+
+.menu__image {
+  width: 175px;
+  height: 325px;
 }
 
 
