--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -13,6 +13,8 @@
 .header {
   position: sticky;
   top: 0;
+  display: flex;
+  justify-content: space-evenly;
   color: #fff;
   padding: 1em;
  z-index: 1;
