--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -106,6 +106,16 @@
   height: 325px;
 }
 
+/**** CHARACTER POPUP ****/
+
+.characterPopup {
+  position: absolute;
+  height: 200px;
+  width: 100px;
+  background-color: #fff;
+  z-index: 3;
+}
+
 
 /**** BACKGROUND IMAGE ****/
 
