--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -114,6 +114,26 @@
   width: 100px;
   background-color: #fff;
   z-index: 3;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  border: 1px solid #000;
+}
+
+.characterPopup__selector {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 25px;
+  flex: 1;
+  width: 100%;
+  border: 1px solid  #000;
+  cursor: pointer;
+}
+
+.characterPopup__selector:hover {
+  background-color: #ccc;
 }
 
 
