--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -152,10 +152,27 @@
   transform: translate(-50%);
   height: 200px;
   width: 500px;
-  background-color: #404040;
+  background-color: #606060;
   border-radius: 5px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-evenly;
+}
+
+/**** SEARCH POPUP ****/
+
+.searchPopup {
+  font-size: 1.5em;
+  font-weight: bold;
+  position: fixed;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%);
+  height: 100px;
+  width: 325px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 5px;
 }
