--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -17,16 +17,15 @@
   justify-content: space-evenly;
   color: #fff;
   padding: 1em;
- z-index: 1;
- background-color: #000;
+  z-index: 1;
+  background-color: #000;
 }
 
 
 /**** MENU ****/
 
 .menu {
-  width: 1000px;
-  height: 550px;
+  width: 55%;
   position: fixed;
   background-color: #fff;
   top: 20%;
@@ -36,20 +35,21 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  padding: 20px 0 20px 0;
+  padding: 20px;
   border-radius: 5px;  
- z-index: 2;
+  z-index: 2;
 }
 
 .menu__list {
-  height: 200px;
-  width: 900px;
+  height: 100%;
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: space-between;
+  padding: 20px;
 }
 
-.menu__item {
+.menu__item {  
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -60,8 +60,8 @@
 }
 
 .menu__image {
-  width: 175px;
-  height: 325px;
+  max-width: 100%;
+  
 }
 
 /**** CHARACTER MENU ****/
@@ -141,6 +141,7 @@
   max-width: 100%;
   border: 2px solid #000;
   cursor: url(../images/custom-cursor.svg), auto;
+  
 }
 
 /**** RESULTS ****/
